--- a/acordeon.css
+++ b/acordeon.css
@@ -12,14 +12,14 @@
 	display: block;
 	height: 35px;
 	cursor: pointer;
-	color: #777;
-	text-shadow: 1px 1px 1px rgba(255,255,255,0.8);
+	color: #000;
+	text-shadow: 1px 1px 1px #fff;
 	line-height: 33px;
 	font-size: 19px;
 	background: #ffffff;
 	background: -moz-linear-gradient(top, #ffffff 1%, #eaeaea 100%);
 	background: -webkit-gradient(linear, left top, left bottom, color-stop(1%,#ffffff), color-stop(100%,#eaeaea));
-	background: -webkit-linear-gradient(top, #ffffff 1%,#eaeaea 100%);
+	background: -webkit-linear-gradient(top, #cacfd2 1%,#5dade2 100%);
 	background: -o-linear-gradient(top, #ffffff 1%,#eaeaea 100%);
 	background: -ms-linear-gradient(top, #ffffff 1%,#eaeaea 100%);
 	background: linear-gradient(top, #ffffff 1%,#eaeaea 100%);
@@ -30,7 +30,7 @@
 		0px 2px 2px rgba(0,0,0,0.1);
 }
 .ac-container label:hover{
-	background: #fff;
+	background: #cacfd2;
 }
 .ac-container input:checked + label,
 .ac-container input:checked + label:hover{
